@@ -1,4 +1,5 @@
 using System;
+using System.CodeDom;
 
 namespace Stetic.Wrapper {
 
@@ -7,6 +8,11 @@ namespace Stetic.Wrapper {
 		public static new Gtk.VScale CreateInstance ()
 		{
 			return new Gtk.VScale (0.0, 100.0, 1.0);
+		}
+		
+		internal protected override CodeExpression GenerateWidgetCreation (GeneratorContext ctx)
+		{
+			return new CodeObjectCreateExpression (ClassDescriptor.WrappedTypeName, new CodePrimitiveExpression (null));
 		}
 	}
 }
