@@ -1,4 +1,5 @@
 using System;
+using System.CodeDom;
 
 namespace Stetic.Wrapper {
 
@@ -7,6 +8,11 @@ namespace Stetic.Wrapper {
 		public static new Gtk.VScrollbar CreateInstance ()
 		{
 			return new Gtk.VScrollbar (new Gtk.Adjustment (0.0, 0.0, 100.0, 1.0, 10.0, 10.0));
+		}
+		
+		internal protected override CodeExpression GenerateWidgetCreation (GeneratorContext ctx)
+		{
+			return new CodeObjectCreateExpression (ClassDescriptor.WrappedTypeName, new CodePrimitiveExpression (null));
 		}
 	}
 }
